# docker_update_sidecar

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: __init__.py  __main__.py
app/controllers/: container.py
app/errors/: __init__.py  docker.py
app/service/: docker.py
app/utils/: bytes.py  decorators.py
poc/: Dockerfile  script.sh
