[tool.poetry]
name = "docker_update_sidecard"
version = "0.1.0"
description = ""
authors = ["juan mesaglio <juan.mesaglio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask-restx = "^0.5.1"
docker = "^5.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
